setting up first chapter

--- a/Hannes/Adventure-Pandemonium-master/html/3.html
+++ b/Hannes/Adventure-Pandemonium-master/html/3.html
@@ -2,31 +2,29 @@
 <html>
 
 <head>
-    <title>Pandemonium</title>
+    <title>Experiment</title>
     <link rel="stylesheet" type="text/css" href="../css/styles.css">
 </head>
 
-<body onload="loadPage()">
+<body onload="init()">
 
-    <div class="status">
-        <h3>Status</h3>
-        <p id="inventory"></p>
-        <p id="fearPoints"></p>
-    </div>
 
     <div class="content">
-        <h1>3.</h1>
-        <p>You decide to look through the windows, but all the windows on the first floor have their curtains drawn, and are barricaded with thick iron bars. The light you saw earlier came from the third floor, and is now dark.</p>
-        <p>Giving up looking through more windows you choose to...</p>
+        <p>She also created this "tradition" with you, when you put a few forks in the bucket for spoons, that people
+            take from when picking up a soup in the cafeteria. Sometimes they notice and just exchange it, but you count
+            points for everyone who doesn't notice until they put the fork in the soup.
+            There are two such pick-up spots, so you divided them and compete against each other.
+            One point for you today! It's a guy from the HR department. He even tried to eat his soup with it and all
+            the liquid poured through the fork back into the plate. You tell Sophie that there should be an extra point
+            for that. You laugh and she says 0.5 point extra is fair.</p>
     </div>
-    
+
     <div class="choices">
-        <button type="button" onclick=changePage("2.html")>Return to the front door and knock</button><br><br>
-        <button type="button" onclick=changePage("4.html")>Go around the estate</button><br>
+        <button class="myBtn" type="input" onclick=changePage("4.html")>Continue</button><br><br>
     </div>
 
     <script type="text/javascript" src="../js/script.js"></script>
-    
+
 </body>
 
 </html>
