--- a/Hannes/Adventure-Pandemonium-master/html/4.html
+++ b/Hannes/Adventure-Pandemonium-master/html/4.html
@@ -2,32 +2,30 @@
 <html>
 
 <head>
-    <title>Pandemonium</title>
+    <title>Experiment</title>
     <link rel="stylesheet" type="text/css" href="../css/styles.css">
 </head>
 
-<body onload="loadPage()">
+<body onload="init()">
 
-    <div class="status">
-        <h3>Status</h3>
-        <p id="inventory"></p>
-        <p id="fearPoints"></p>
-    </div>
 
     <div class="content">
-        <h1>4.</h1>
-        <p>To the right of the main door leads to a hedge garden, but you cannot see much further than the first row of bushes due to the fog. To the left the driveway bends around the manor into the garage.</p>
-        <p>You decide to...</p>
+        <p>"He must be overworked," You say.
+
+            "Or can't take his eyes off that new HR assistant that sits right in front of him!" Sophie adds and grins.
+
+            "You know what's tomorrow? Fridaay!" and as you're saying this, the circles under our eyes get hidden in
+            your smile.
+
+            "Yes! But I think the days at work are nice too."</p>
     </div>
-    
+
     <div class="choices">
-        <button type="button" onclick=changePage("2.html")>Return to the front door and knock</button><br><br>
-        <button type="button" onclick=changePage("5.html")>Turn right towards the hedge garden</button><br><br>
-        <button type="button" onclick=changePage("6.html")>Turn left towards the garage</button><br>
+        <button class="myBtn" type="input" onclick=changePage("5.html")>Continue</button><br><br>
     </div>
 
     <script type="text/javascript" src="../js/script.js"></script>
-    
+
 </body>
 
 </html>
