--- a/Hannes/Adventure-Pandemonium-master/html/10.html
+++ b/Hannes/Adventure-Pandemonium-master/html/10.html
@@ -2,32 +2,27 @@
 <html>
 
 <head>
-    <title>Pandemonium</title>
+    <title>Experiment</title>
     <link rel="stylesheet" type="text/css" href="../css/styles.css">
 </head>
 
-<body onload="checkOptions('window'); checkOptions('Belphegor'); loadPage()">
+<body onload="init()">
 
-    <div class="status">
-        <h3>Status</h3>
-        <p id="inventory"></p>
-        <p id="fearPoints"></p>
-    </div>
 
     <div class="content">
-        <h1>10.</h1>
-        <p>You decide to...</p>
-    </div>
-    
-    <div class="choices">
-        <button type="button" onclick=changePage("9.html")>Rest until Tristram arrive</button><br><br>
-        <button id="window" type="button" onclick=changePage("11.html")>Look out the window</button><br><br>
-        <button id="Belphegor" type="button" onclick=changePage("12.html")>Search the room</button><br><br>
-        <button type="button" onclick=changePage("13.html")>Check the door</button><br>
+        <p>
+            Okay it's too late. You have to go to work now.
+        </p>
     </div>
 
+    <div class="choices">
+        <button class="myBtn" type="input" onclick=changePage("11.html")>wait some more</button><br><br>
+    </div>
+
+    <script src="../js/angermeter.js"></script>
+
     <script type="text/javascript" src="../js/script.js"></script>
-    
+
 </body>
 
 </html>
