--- a/Hannes/Adventure-Pandemonium-master/html/2.html
+++ b/Hannes/Adventure-Pandemonium-master/html/2.html
@@ -2,28 +2,21 @@
 <html>
 
 <head>
-    <title>Pandemonium</title>
+    <title>Experiment</title>
     <link rel="stylesheet" type="text/css" href="../css/styles.css">
 </head>
 
-<body onload="loadPage()">
+<body onload="init()">
 
-    <div class="status">
-        <h3>Status</h3>
-        <p id="inventory"></p>
-        <p id="fearPoints"></p>
-    </div>
 
     <div class="content">
-        <h1>2.</h1>
-        <p>Moments after knocking you hear voices and hurried steps towards the door. The door unbolted and swung open as you come face to face with your hosts... </p>
-        <p>The first of two is a tall man with broad shoulders and sharp features, dressed in a grey evening robe, you estimate he is of about fourty of age. The other is an older man in a butler's uniform, his age showing in his balding scalp and slightly hunched over posture, he appears nervous and avoids your eye contact.</p>
-        <p>The first of the two appears undisturbed by his companion's demeanour and warmly greets you, "My name is Alessandro and I welcome you to my home, this here is Tristram and he serves as our butler. What pleasure do I owe for the visit tonight?"</p>
-        <p>Sharing that you are stranded due to the fog and unable to continue your journey out of the wood, Alessandro offers to provide a room for you to rest while waiting for the fog to clear. Seeing no better alternative, you agree and enter the estate. Tristram takes your coat without a word and hangs it, before bolting the door.</p>
+        <p>Another day at the office... Lunch breaks at the cafeteria are the best parts of the day usually. Not just because of the food, but because you get to hang out with Sophie.
+            You always have something to talk about, she is well-read and always surprises you with something you have never heard about. She knows so much about history, the world wars specifically. But also about other cultures and their traditions...
+            She inspires you so much!!</p>
     </div>
     
     <div class="choices">
-        <button type="button" onclick=changePage("7.html")>Continue</button><br>
+        <button class="myBtn" type="input" onclick=changePage("3.html")>Continue</button><br><br>
     </div>
 
     <script type="text/javascript" src="../js/script.js"></script>
