--- a/Hannes/Adventure-Pandemonium-master/html/5.html
+++ b/Hannes/Adventure-Pandemonium-master/html/5.html
@@ -2,33 +2,31 @@
 <html>
 
 <head>
-    <title>Pandemonium</title>
+    <title>Experiment</title>
     <link rel="stylesheet" type="text/css" href="../css/styles.css">
 </head>
 
-<body onload="updateDict('hedge'); checkOptions('garage'); loadPage()">
+<body onload="init()">
 
-    <div class="status">
-        <h3>Status</h3>
-        <p id="inventory"></p>
-        <p id="fearPoints"></p>
-    </div>
 
     <div class="content">
-        <h1>5.</h1>
-        <p>The hedge garden is largely unkept, with the hedge sculptures growing out into strange shapes and forms. In the middle of the garden is a stone fountain which no longer flows, the water stagnant and murky.</p>
-        <p>Apart from reminding you of the dropping temperatures, there seem to be nothing of interest in the hedge garden. You were about to leave when you spotted a small doll sticking out of one of the hedges. It appears that the doll seems to be thrown out from one of the windows above, but there is no light from any of them.</p>
-        <p>Will you...</p>
+        <p>"Sure. I mean sometimes, maybe. For me it's just a temporary solution, you know that. I prefer the weekend
+            for sure. I had to explain so much stuff to Lisa today, she didn't know where to send the reports when the
+            problem is with the physical device. Which could be okay but it took so long until she got it..."
+
+            "Yeah yeah... I know that this is not your dream career. But at least it pays your bills now."
+
+            "Sure.. also, I will get my gym membership card back tomorrow. I lent it to an old friend from high school,
+            she wanted to try the gym for a week before buying the membership for a month. A bit inconvenient for me,
+            but I get it."</p>
     </div>
-    
+
     <div class="choices">
-        <button type="button" onclick=changePage("8.html")>Pick up the doll</button><br><br>
-        <button type="button" onclick=changePage("2.html")>Ignore the doll and return to the front door and knock</button><br><br>
-        <button id="garage" type="button" onclick=changePage("6.html")>Ignore the doll and go to the garage</button><br><br>
+        <button class="myBtn" type="input" onclick=changePage("6.html")>Continue</button><br><br>
     </div>
 
     <script type="text/javascript" src="../js/script.js"></script>
-    
+
 </body>
 
 </html>
