--- a/Hannes/Adventure-Pandemonium-master/html/6.html
+++ b/Hannes/Adventure-Pandemonium-master/html/6.html
@@ -2,30 +2,31 @@
 <html>
 
 <head>
-    <title>Pandemonium</title>
+    <title>Experiment</title>
     <link rel="stylesheet" type="text/css" href="../css/styles.css">
 </head>
 
-<body onload="updateDict('garage'); checkOptions('hedge'); changeFear(1)">
+<body onload="init()">
 
-    <div class="status">
-        <h3>Status</h3>
-        <p id="inventory"></p>
-        <p id="fearPoints"></p>
-    </div>
 
     <div class="content">
-        <h1>6.</h1>
-        <p>You follow the driveway to the garage door, it is an intimidating metal shutter, locked shut, and you see no other points of entry. As you were looking around, you noticed a trail of red stains seeping from below the garage door. Looking closer you realise that it is fresh blood! Increase one Fear point!</p>
-        <p>A nervous feeling creeps into you as you ponder what kind of inhabitants lie in the manor. However, staying out in the cold could be dangerous if the temperature drops drastically in the night. </p>
+        <p>"Hmm, yeah, I guess it makes sense, but she could have paid for a few single entries too.."
+
+            "Yeah.. I knew that I wouldn't go more than once this week anyway, so I was like "yeah sure". But tomorrow
+            morning I should get it back."
+
+            "It's really nice of you though."
+
+            "Everyone is nice according to you Sophie haha. I might need her help with some administrative things later
+            soo that might have influenced me too."</p>
     </div>
-    
+
     <div class="choices">
-        <button type="button" onclick=changePage("2.html")>Return to the front door and knock</button><br><br>
-        <button id="hedge" type="button" onclick=changePage("5.html")>Go to the hedge garden</button><br>
+        <button class="myBtn" type="input" onclick=changePage("7.html")>Continue</button><br><br>
     </div>
 
     <script type="text/javascript" src="../js/script.js"></script>
+
 </body>
 
 </html>
