--- a/Hannes/Adventure-Pandemonium-master/html/7.html
+++ b/Hannes/Adventure-Pandemonium-master/html/7.html
@@ -2,34 +2,28 @@
 <html>
 
 <head>
-    <title>Pandemonium</title>
+    <title>Experiment</title>
     <link rel="stylesheet" type="text/css" href="../css/styles.css">
 </head>
 
-<body onload="loadPage()">
+<body onload="init()">
 
-    <div class="status">
-        <h3>Status</h3>
-        <p id="inventory"></p>
-        <p id="fearPoints"></p>
-    </div>
 
     <div class="content">
-        <h1>7.</h1>
-        <p>As Alessandro leads you along the main hall, you notice the estate's interior is clearly old but luxuriously furnished and well maintained, it's design remnant of an older era. Your host explains that the estate is an ancient Victorian building his ancestors built over a century ago, that he had inherited from his father.</p>
-        <p>You follow him up a spiral staircase to the second floor, which is organized into a center hall, where the staircase ends, and the East and West wings. He leads you to the East wing which is a long corridor with several bedrooms, each having a wooden nameplate. Your room is at the end of the corridor, and named 'Belphegor'. </p>
-        <p>Alessandro then produces a key from his robe pocket and unlocks it, and opens the door for you to enter. The room is a spacious and luxurious, furnished with a large bed with plush pillows, a leather recliner, couch and coffee table. There is a window that faces the front gate and through it you see that the fog is still dense.</p>
-        <p>"Tristram will be here shortly with your supper, please make yourself comfortable for now. Unfortunately I have some urgent matters to attend to which prevents me from staying to chat. However, we can converse in the morning over breakfast." Alessandro then bids you goodnight and locks the door behind him.</p>
-        <p>You have some time in your room before Tristram brings you your supper. Do you...</p>
+        <p>It's Friday morning. You're waiting at the subway station to meet the friend who has your gym card. She's
+            already 10 minutes late so you decide to call her.
+
+            No answer...
+
+            You send her a message and wait for a bit more, but you will need to leave for work soon.</p>
     </div>
-    
+
     <div class="choices">
-        <button type="button" onclick=changePage("9.html")>Ease yourself onto the recliner and relax</button><br><br>
-        <button type="button" onclick=changePage("10.html")>Ignore the recliner</button><br>
+        <button class="myBtn" type="input" onclick=changePage("8.html")>Continue</button><br><br>
     </div>
 
     <script type="text/javascript" src="../js/script.js"></script>
-    
+
 </body>
 
 </html>
