--- a/Hannes/Adventure-Pandemonium-master/html/9.html
+++ b/Hannes/Adventure-Pandemonium-master/html/9.html
@@ -2,30 +2,25 @@
 <html>
 
 <head>
-    <title>Pandemonium</title>
+    <title>Experiment</title>
     <link rel="stylesheet" type="text/css" href="../css/styles.css">
 </head>
 
-<body onload="loadPage()">
+<body onload="init()">
 
-    <div class="status">
-        <h3>Status</h3>
-        <p id="inventory"></p>
-        <p id="fearPoints"></p>
-    </div>
 
     <div class="content">
-        <h1>9.</h1>
-        <p>Moments after sitting down on you are overwhelmed with a wave of fatigue and drowsiness, putting you into a deep slumber filled with nightmares. The estate you have unknowingly entered contains a cult of evil worshippers, and your room is home to a night hag, a cursed creature that induce nightmares and sleep paralysis. You will continue to dream until your hosts discover your helpless body, and when you awake you will face only agony and suffering before being made sacrifice to the unholy gods they worship...</p>
-        <p id="dead">Your journey ends here.</p>
+        <p>
+            Okay it's too late. You have to go to work now.
+        </p>
     </div>
-    
+
     <div class="choices">
-        <button type="button" onclick=changePage("main.html")>Restart</button><br>
+        <button class="myBtn" type="input" onclick=changePage("10.html")>wait some more</button><br><br>
     </div>
 
     <script type="text/javascript" src="../js/script.js"></script>
-    
+
 </body>
 
 </html>
