--- a/Hannes/Adventure-Pandemonium-master/html/10.html
+++ b/Hannes/Adventure-Pandemonium-master/html/10.html
@@ -3,6 +3,10 @@
 
 <head>
     <title>Experiment</title>
+    <script src="../js/p5.min.js"></script>
+    <script src="../js/p5.dom.min.js"></script>
+    <script src="../js/p5.sound.min.js"></script>
+    <script src="../js/p5.serialport.js"></script>
     <link rel="stylesheet" type="text/css" href="../css/styles.css">
 </head>
 
@@ -13,13 +17,36 @@
         <p>
             Okay it's too late. You have to go to work now.
         </p>
+
+        <p id="question">
+            How do you feel about this situation?
+            a)angry 
+            b)a bit angry 
+            c)very angry 
+            d)not angry
+            (please write down your answers on a paper)
+        </p>
     </div>
 
     <div class="choices">
-        <button class="myBtn" type="input" onclick=changePage("11.html")>wait some more</button><br><br>
+        <button id="button1" class="button1" type="input" onclick=changePage("11.html")>wait some more</button><br><br>
     </div>
 
-    <script src="../js/angermeter.js"></script>
+    <div class="w3-container">
+
+        <div class="w3-light-grey">
+            <div id="myBar" class="w3-green" style="height:24px;width:0;background-color:rgb(255, 0, 0)"></div>
+        </div>
+        <br>
+    </div>
+
+
+    <button id="button" onclick="inDataStore()">Save</button>
+
+
+    <p id="result"></p>
+
+    <script src="..\js\angermeter.js"></script>
 
     <script type="text/javascript" src="../js/script.js"></script>
 
