--- a/Hannes/Adventure-Pandemonium-master/html/2.html
+++ b/Hannes/Adventure-Pandemonium-master/html/2.html
@@ -3,6 +3,10 @@
 
 <head>
     <title>Experiment</title>
+    <script src="../js/p5.min.js"></script>
+    <script src="../js/p5.dom.min.js"></script>
+    <script src="../js/p5.sound.min.js"></script>
+    <script src="../js/p5.serialport.js"></script>
     <link rel="stylesheet" type="text/css" href="../css/styles.css">
 </head>
 
@@ -16,7 +20,7 @@
     </div>
     
     <div class="choices">
-        <button class="myBtn" type="input" onclick=changePage("3.html")>Continue</button><br><br>
+        <button class="myBtn1" type="input" onclick=changePage("3.html")>Continue</button><br><br>
     </div>
 
     <script type="text/javascript" src="../js/script.js"></script>
