changing css on keypress

--- a/Hannes/Adventure-Pandemonium-master/html/10.html
+++ b/Hannes/Adventure-Pandemonium-master/html/10.html
@@ -29,7 +29,7 @@
     </div>
 
     <div class="choices">
-        <button id="button1" class="button1" type="input" onclick=changePage("11.html")>wait some more</button><br><br>
+        <button id="myBtn1" class="myBtn1" type="input" onclick=changePage("11.html")>wait some more</button><br><br>
     </div>
 
     <div class="w3-container">
@@ -41,7 +41,7 @@
     </div>
 
 
-    <button id="button" onclick="inDataStore()">Save</button>
+    <button id="myBtn1" class="myBtn1" onclick="inDataStore()">Save</button>
 
 
     <p id="result"></p>
