letting text react to values from angrymeter

--- a/Hannes/Adventure-Pandemonium-master/html/10.html
+++ b/Hannes/Adventure-Pandemonium-master/html/10.html
@@ -41,7 +41,7 @@
     </div>
 
 
-    <button id="myBtn1" class="myBtn1" onclick="inDataStore()">Save</button>
+    <button id="saveBtn" class="saveBtn" onclick="inDataStore()">Save</button>
 
 
     <p id="result"></p>
