--- a/Hannes/Adventure-Pandemonium-master/html/2.html
+++ b/Hannes/Adventure-Pandemonium-master/html/2.html
@@ -20,7 +20,8 @@
     </div>
     
     <div class="choices">
-        <button class="myBtn1" type="input" onclick=changePage("3.html")>Continue</button><br><br>
+        <button id="myBtn1" class="myBtn1" type="input" onclick=changePage("5.html")>one</button><br><br>    </div>
+
     </div>
 
     <script type="text/javascript" src="../js/script.js"></script>
