--- a/Hannes/Adventure-Pandemonium-master/html/4.html
+++ b/Hannes/Adventure-Pandemonium-master/html/4.html
@@ -25,7 +25,7 @@
     </div>
 
     <div class="choices">
-        <button class="myBtn1" type="input" onclick=changePage("5.html")>Continue</button><br><br>
+        <button id="myBtn1" class="myBtn1" type="input" onclick=changePage("5.html")>Continue</button><br><br>
     </div>
 
     <script type="text/javascript" src="../js/script.js"></script>
