--- a/Hannes/Adventure-Pandemonium-master/html/6.html
+++ b/Hannes/Adventure-Pandemonium-master/html/6.html
@@ -26,7 +26,8 @@
     </div>
 
     <div class="choices">
-        <button class="myBtn1" type="input" onclick=changePage("7.html")>Continue</button><br><br>
+        <button id="myBtn1" class="myBtn1" type="input" onclick=changePage("7.html")>continue</button><br><br>
+        <button id="myBtn2" class="myBtn2" type="input" onclick=changePage("8.html")>continue</button><br><br>
     </div>
 
     <script type="text/javascript" src="../js/script.js"></script>
