--- a/Hannes/Adventure-Pandemonium-master/html/11.html
+++ b/Hannes/Adventure-Pandemonium-master/html/11.html
@@ -1,42 +1,34 @@
 <!DOCTYPE html>
 <html>
-    <head>
-        <meta charset="utf-8">
-        <meta http-equiv="X-UA-Compatible" content="IE=edge">
-        <title></title>
-        <meta name="description" content="">
-        <meta name="viewport" content="width=device-width, initial-scale=1">
-        <script src="..\js\p5.min.js"></script>
-        <script src="..\js\p5.dom.min.js"></script>
-        <script src="..\js\p5.sound.min.js"></script>
-        <script src="..\js\p5.serialport.js"></script>
-        <link rel="stylesheet" href="..\css\style.css">
-        <!-- <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css"> -->
-    </head>
-    <body>
 
-        <br>
-        <br>
+<head>
+    <title>Experiment</title>
+    <script src="../js/p5.min.js"></script>
+    <script src="../js/p5.dom.min.js"></script>
+    <script src="../js/p5.sound.min.js"></script>
+    <script src="../js/p5.serialport.js"></script>
+    <link rel="stylesheet" type="text/css" href="../css/styles.css">
+</head>
 
-        <div class="w3-container">
-          
-            <div class="w3-light-grey">
-              <div id="myBar" class="w3-green" style="height:24px;width:0;background-color:rgb(255, 0, 0)"></div>
-            </div>
-            <br>
-          </div>
+<body onload="init()">
 
 
-<!-- <div class="slidecontainer">
-  <input type="range" min="0 " max="100" value="50" class="slider" id="myRange">
-  <p class="para">Value: <span id="demo"></span></p>
-</div> -->
+    <div class="content">
+        <p>
+            Okay it's too late. You have to go to work now.
+        </p>
+    </div>
 
-<button id="buttonl" onclick="inDataStore()">Save</button>   
+    <div class="choices">
+        <button id="myBtn1" class="myBtn1" type="input" onclick=changePage("10.html")>wait some more</button><br><br>
+        <button id="myBtn2" class="myBtn2" type="input" onclick=changePage("10.html")>secret button</button><br><br>
+        <button id="myBtn3" class="myBtn3" type="input" onclick=changePage("10.html")>super secret button</button><br><br>
+    </div>
 
+    <p id="anger">ANger</p>
 
-<p id="result"></p>
+    <script type="text/javascript" src="../js/script.js"></script>
 
-<script src="..\js\angermeter.js"></script>
-    </body>
+</body>
+
 </html>
