--- a/Hannes/Adventure-Pandemonium-master/html/3.html
+++ b/Hannes/Adventure-Pandemonium-master/html/3.html
@@ -24,7 +24,7 @@
     </div>
 
     <div class="choices">
-        <button class="myBtn1" type="input" onclick=changePage("4.html")>Continue</button><br><br>
+        <button id="myBtn1" class="myBtn1" type="input" onclick=changePage("4.html")>Continue</button><br><br>
     </div>
 
     <script type="text/javascript" src="../js/script.js"></script>
