--- a/Hannes/Adventure-Pandemonium-master/html/7.html
+++ b/Hannes/Adventure-Pandemonium-master/html/7.html
@@ -23,7 +23,7 @@
     </div>
 
     <div class="choices">
-        <button class="myBtn1" type="input" onclick=changePage("8.html")>Continue</button><br><br>
+        <button id="myBtn1" class="myBtn1" type="input" onclick=changePage("8.html")>Continue</button><br><br>
     </div>
 
     <script type="text/javascript" src="../js/script.js"></script>
