--- a/Hannes/Adventure-Pandemonium-master/html/8.html
+++ b/Hannes/Adventure-Pandemonium-master/html/8.html
@@ -21,7 +21,7 @@
     </div>
 
     <div class="choices">
-        <button class="myBtn1" type="input" onclick=changePage("9.html")>wait some more</button><br><br>
+        <button id="myBtn1" class="myBtn1" type="input" onclick=changePage("9.html")>wait some more</button><br><br>
     </div>
 
     <script type="text/javascript" src="../js/script.js"></script>
