--- a/Hannes/Adventure-Pandemonium-master/html/15.html
+++ b/Hannes/Adventure-Pandemonium-master/html/15.html
@@ -14,16 +14,19 @@
 
 
     <div class="content">
-        <p>We will ask you questions about your emotions, to fill out your profile in the database.
+        <p>
+            “Everything’s alright. I just think he got scared when the car cut in front of us” Sophie said and smiled towards Nicky.
 
-            When asked the questions, please answer honestly, there is no right or wrong. This will allow us to identify
-            your soul-character to be able to match you with fitting persons, may we require another soul-substitution
-            from you in the future.</p>
+            “Okay, let’s go inside. Aaron wants to show you the house, he is really proud of his hard work. He has done such a great job, I love it.”
+            
+            </p>
     </div>
 
     <div class="choices">
-        <button id="myBtn1" class="myBtn1" type="input" onclick=changePage("5.html")>continue</button><br><br>
+        <button id="myBtn1" class="myBtn1" type="input" onclick=changePage("16.html")>Continue</button><br><br>
+
     </div>
+
 
     <script type="text/javascript" src="../js/script.js"></script>
 
