--- a/Hannes/Adventure-Pandemonium-master/html/30.html
+++ b/Hannes/Adventure-Pandemonium-master/html/30.html
@@ -15,16 +15,20 @@
 
     <div class="content">
         <p>
-            We would like to thank you in advance for investing a part of your free time into the Soul Substitution
-            program. Your achievements will be remembered and rewarded.
 
 
-            Please confirm when you are ready to begin the transition into Sophie Stavoc.</p>
+            “Brown or blue what? For the table you couldn't fix? I thought you were talking about the vacation in Hawaii
+            where I took us."
+
+            “No, wait, I mean for the room.. Oh there it is! Finally.” Sophie loves going to IKEA, it is one of her
+            favorite places to visit, and can get stuck in there for hours. They are just going to park and then ---
+</p>
     </div>
 
     <div class="choices">
-        <button id="myBtn1" class="myBtn1" type="input" onclick=changePage("6.html")>continue</button><br><br>
+        <button id="myBtn1" class="myBtn1" type="input" onclick=changePage("31.html")>continue</button><br><br>
     </div>
+
 
     <script type="text/javascript" src="../js/script.js"></script>
 
