--- a/Hannes/Adventure-Pandemonium-master/html/72.html
+++ b/Hannes/Adventure-Pandemonium-master/html/72.html
@@ -15,16 +15,16 @@
 
     <div class="content">
         <p>
-            Sophie shared her feelings about what happened to a friend who works across the street.
-
-            She suggested she goes to talk to her boss immediately, while it's still fresh.
+            The day was hard to get through so Sophie decided to fake a sick-day and go home. 
+            Sophie was still not sure how to handle this when she entered their apartment. 
+            Alex has not finished his job for the day so she looked for a way how to calm herself down in the meantime.
             <p hidden id="anger">Anger</p>
         </p>
     </div>
 
     <div class="choices">
-        <button id="myBtn1" class="myBtn1" type="input" onclick=changePage("72.html")>Come back to work and continue as usual</button><br><br>     
-        <button id="myBtn2" class="myBtn2" type="input" onclick=changePage("58.html")>Go ask the boss about this</button><br><br>     
+        <button id="myBtn1" class="myBtn1" type="input" onclick=changePage("79.html")>Take a bubble bath</button><br><br>     
+        <button id="myBtn2" class="myBtn2" type="input" onclick=changePage("80.html")>Go for a run</button><br><br>     
     </div>
 
 
