--- a/Hannes/Adventure-Pandemonium-master/html/71.html
+++ b/Hannes/Adventure-Pandemonium-master/html/71.html
@@ -15,17 +15,15 @@
 
     <div class="content">
         <p>
-            Sophie decided to take a little break and go for a little walk to the park nearby. 
-            She needed some fresh air to gather her thoughts and just breath a little. 
-            Maybe she was not the perfect candidate for the promotion and have to work even harder in the future. 
-            
-            At least she has Alex.
+            Sophie left the office. She is overwhelmed and doesn't know what to think.
+            <p hidden id="anger">Anger</p>
         </p>
     </div>
 
     <div class="choices">
-        <button id="myBtn1" class="myBtn1" type="input" onclick=changePage("72.html")>Go back to work</button><br><br>     
-  
+        <button id="myBtn1" class="myBtn1" type="input" onclick=changePage("72.html")>Continue to work as usual</button><br><br>     
+        <button id="myBtn2" class="myBtn2" type="input" onclick=changePage("73.html")>Go home</button><br><br>     
+        <button id="myBtn3" class="myBtn3" type="input" onclick=changePage("74.html")>Call mom</button><br><br>     
     </div>
 
 
