--- a/Hannes/Adventure-Pandemonium-master/html/18.html
+++ b/Hannes/Adventure-Pandemonium-master/html/18.html
@@ -27,7 +27,9 @@
     <div class="choices">
         <button id="myBtn1" class="myBtn1" type="input" onclick=changePage("19.html")>call him</button><br><br>
         <button id="myBtn2" class="myBtn2" type="input" onclick=changePage("20.html")>tell him in person later</button><br><br>
+        <button id="myBtn3" class="myBtn3" type="input" onclick=changePage("20.html")>tell him in person later but in secret</button><br><br>
 
+        <p hidden id="anger">Anger</p>
     </div>
 
 
