--- a/Hannes/Adventure-Pandemonium-master/html/17.html
+++ b/Hannes/Adventure-Pandemonium-master/html/17.html
@@ -22,7 +22,7 @@
             
             Soultopilot has begun a recalibration.
             </p>
-            <p id="anger">Anger</p>
+            <p hidden id="anger">Anger</p>
     </div>
     
 
