--- a/Hannes/Adventure-Pandemonium-master/html/70.html
+++ b/Hannes/Adventure-Pandemonium-master/html/70.html
@@ -22,12 +22,12 @@
             
             Soultopilot has begun a recalibration.
             </p>
-            <p id="anger">Anger</p>
+            <p hidden id="anger">Anger</p>
     </div>
     
 
     <div class="choices">
-        <button id="myBtn1" class="myBtn1" type="input" onclick=changePage("18.html")>back to sophie</button><br><br>
+        <button id="myBtn1" class="myBtn1" type="input" onclick=changePage("71.html")>back to sophie</button><br><br>
 
     </div>
 
