--- a/Hannes/Adventure-Pandemonium-master/html/114.html
+++ b/Hannes/Adventure-Pandemonium-master/html/114.html
@@ -15,7 +15,7 @@
 
     <div class="content">
         <p>
-            Sophie packed her essentials to be ready to leave the apartment at any moment. 
+            Sophie packed her essentials to be ready to leave the apartment at any moment.  <br>
             It calmed her down, but she wants to have a plan.
         </p>
     </div>
