--- a/Hannes/Adventure-Pandemonium-master/html/56.html
+++ b/Hannes/Adventure-Pandemonium-master/html/56.html
@@ -16,7 +16,7 @@
     <div class="content">
         <p>
             Sophie decided to take a little break and go for a little walk to the park nearby. <br>
-            She needed some fresh air to gather her thoughts and just breath a little. <br>
+            She needed some fresh air to gather her thoughts and just breathe a little. <br>
             Maybe she was not the perfect candidate for the promotion and have to work even harder in the future. <br><br>
             
             At least she has Alex.
