--- a/Hannes/Adventure-Pandemonium-master/html/119.html
+++ b/Hannes/Adventure-Pandemonium-master/html/119.html
@@ -46,7 +46,7 @@
     </div>
 
     <div class="choices">
-        <button id="myBtn1" class="myBtn1" type="input" onclick=changePage("120.html")>Pretend to not see him</button><br><br> 
+        <button id="myBtn1" class="myBtn1" type="input" onclick=changePage("120.html")>Pretend not to see him</button><br><br> 
     </div>
 
 
