--- a/Working Code/Without Slider/css/html/56.html
+++ b/Working Code/Without Slider/css/html/56.html
@@ -16,7 +16,7 @@
     <div class="content">
         <p>
             Sophie decided to take a little break and go for a little walk to the park nearby. 
-            She needed some fresh air to gather her thoughts and just breath a little. 
+            She needed some fresh air to gather her thoughts and just breathe a little. 
             Maybe she was not the perfect candidate for the promotion and have to work even harder in the future. 
             
             At least she has Alex.
