--- a/Working Code/Without Slider/css/html/101.html
+++ b/Working Code/Without Slider/css/html/101.html
@@ -47,7 +47,7 @@ Sophie noticed Josef is in the restaurant too.
 
     <div class="choices">
         <button id="myBtn1" class="myBtn1" type="input" onclick=changePage("102.html")>Wave at him</button><br><br>     
-        <button id="myBtn2" class="myBtn2" type="input" onclick=changePage("102.html")>Pretend to not see him</button><br><br>     
+        <button id="myBtn2" class="myBtn2" type="input" onclick=changePage("102.html")>Pretend not to see him</button><br><br>     
     </div>
 
 
