--- a/Working Code/With Slider/html/3.1.html
+++ b/Working Code/With Slider/html/3.1.html
@@ -33,6 +33,12 @@
         </div>
         <br>
     </div>
+
+    <div class="slidecontainer">
+        <input type="range" min="1" max="100" value="10" class="slider" id="myRange">
+        <p>Value: <span id="demo"></span></p>
+      </div>
+
     <p>press continue when you are ready</p>
 
 
