--- a/Hannes/Adventure-Pandemonium-master/html/123.html
+++ b/Hannes/Adventure-Pandemonium-master/html/123.html
@@ -15,9 +15,9 @@
 
     <div class="content">
         <p>
-            After a few minutes of reading Sophie found descriptions of behaviors really similar to what she was familiar with from Alex. <br><br>
+            When she came home and Alex had started playing games with his friends she took out her laptop and started reading.
+            After a few minutes of reading Sophie found descriptions of behaviors really similar to what she was familiar with from Alex.
             <i>Was he manipulating her this entire time?</i>
-            After a few minutes of reading, Sophie found descriptions of behaviors really similar to what she was familiar with from Alex. <br><br>Was he manipulating her this entire time?
             
         </p>
     </div>
