--- a/Working Code/With Slider/html/25.html
+++ b/Working Code/With Slider/html/25.html
@@ -16,7 +16,7 @@
     <div class="content">
         <p id="text">Great.
 
-            that's for the visuals.
+            That's for the visuals.
 
             What should the title of the page on social media say?</p>
 
