--- a/Working Code/With Slider/html/23.html
+++ b/Working Code/With Slider/html/23.html
@@ -14,12 +14,12 @@
 
 
     <div class="content">
-        <p id ="text">Tuesday morning Sophie woke up in an extra great mood. She felt very motivated and excited to start working.
+        <h2 id ="text">Tuesday morning Sophie woke up in an extra great mood. She felt very motivated and excited to start working.
             Today she has to prepare a presentation for next week and wanted to make it look extra nice, in case she
             gets asked to present her suggestions for business strategies.
 
 
-            She still needs to edit a few things. What should the background colour of the presentation be?</p>
+            She still needs to edit a few things. What should the background colour of the presentation be?</h2>
 
 
     </div>
