--- a/Working Code/With Slider/html/24.html
+++ b/Working Code/With Slider/html/24.html
@@ -14,9 +14,9 @@
 
 
     <div class="content">
-        <p id="text">Okay.
+        <h2 id="text">Okay.
 
-            Now the font style?</p>
+            Now the font style?</h2>
 
 
     </div>
