--- a/Working Code/With Slider/html/26.html
+++ b/Working Code/With Slider/html/26.html
@@ -14,9 +14,9 @@
 
 
     <div class="content">
-        <p id="text">Awesome.
+        <h2 id="text">Awesome.
 
-            The rest she figured out. Just a few changes might be needed later.</p>
+            The rest she figured out. Just a few changes might be needed later.</h2>
 
 
     </div>
