--- a/Working Code/With Slider/html/4.html
+++ b/Working Code/With Slider/html/4.html
@@ -14,11 +14,11 @@
 
 
     <div class="content">
-        <h2>We will ask you questions about your emotions, to fill out your profile in the database. <br><br>
+        <h2>We will ask you questions about your emotions, which Soultopilot will detect from the situations, to fill out your profile in the database. <br> <br>
 
-            When asked the questions, please answer honestly, there is no right or wrong. This will allow us to identify
-            your soul-character to be able to match you with fitting persons, may we require another soul-substitution
-            from you in the future.</h2>
+            When asked the questions, please answer honestly, there is no right or wrong. 
+            This will allow us to identify your soul-character to be able to match you with fitting persons, 
+            may we require another soul-substitution from you in the future.</h2>
     </div>
 
     <div class="choices">
