--- a/Working Code/With Slider/html/5.html
+++ b/Working Code/With Slider/html/5.html
@@ -15,9 +15,8 @@
 
     <div class="content">
         <h2>
-            We would like to thank you in advance for investing a part of your free time into the Soul Substitution
-            program. Your achievements will be remembered and rewarded.<br><br>
-
+            We would like to thank you in advance for investing a part of your free time into the Soul Substitution program. 
+            Your achievements will be remembered and rewarded. <br> <br>
 
             Please confirm when you are ready to begin the transition into Sophie Stavoc.</h2>
     </div>
