--- a/Working Code/With Slider/html/1.html
+++ b/Working Code/With Slider/html/1.html
@@ -14,17 +14,14 @@
 
 
     <div class="content">
-        <h2>Hi Soul 647,
-        you have been selected to substitute Soul 223, who has escaped the body of Sophie Stavoc without permission.<br><br>
+        <h2>Hi Soul 647, <br> <br><br> 
 
 
-            We are working on locating Soul 223 and bringing it back, but in the meantime, we need you to continue in
-            Sophie's life as if nothing happened.<br> It is a standard process and it will take several days. To you they
-            will probably only seem like minutes, as you will be conscious only during the parts where your input will
-            be needed. <br><br>
-
-
-            Since this will be your first substitution, we will explain everything to you in a moment.</h2>
+            Welcome back to the Soul environment. We hope that your last life was an amazing one. <br> <br>
+            
+            There has been a change in controlling the environment, while you were gone, busy living on Earth.<br> <br>
+            
+            You need to know about it to navigate situations during your in-between lives phase.</h2>
     </div>
 
     <div class="choices">
