--- a/Working Code/With Slider/html/25.html
+++ b/Working Code/With Slider/html/25.html
@@ -25,9 +25,9 @@
 
 
     <div class="choices">
-        <button id="myBtn1" class="myBtn1" type="input" onclick=changePage("27.html")>Social media
+        <button id="myBtn1" class="myBtn1" type="input" onclick=changePage("27.html")>Social Media Strategy
             strategy</button><br><br>
-        <button id="myBtn2" class="myBtn2" type="input" onclick=changePage("27.html")>Strategies for social
+        <button id="myBtn2" class="myBtn2" type="input" onclick=changePage("27.html")>Strategies for Social Media
             media</button><br><br>
     </div>
 
