--- a/Working Code/With Slider/html/105.html
+++ b/Working Code/With Slider/html/105.html
@@ -12,6 +12,10 @@
 
 <body onload="init()">
 
+    <div class="date">
+        <h3>Thurday
+        </h3>
+    </div>
 
     <div class="content">
         <p>
