--- a/Working Code/With Slider/html/23.html
+++ b/Working Code/With Slider/html/23.html
@@ -12,6 +12,9 @@
 
 <body onload="init()">
 
+    <div class="date">
+        <h3>Tuesday</h3>
+    </div>
 
     <div class="content">
         <h2 id ="text">Tuesday morning Sophie woke up in an extra great mood. She felt very motivated and excited to start working.
