--- a/Working Code/With Slider/html/36.html
+++ b/Working Code/With Slider/html/36.html
@@ -11,7 +11,10 @@
 </head>
 
 <body onload="init()">
-
+    
+    <div class="date">
+        <h3>Saturday</h3>
+    </div>
 
     <div class="content">
         <p>Sophie has a yearly buffé with her friends which falls on this Saturday. <br><br>
