--- a/Working Code/With Slider/html/7.html
+++ b/Working Code/With Slider/html/7.html
@@ -12,6 +12,9 @@
 
 <body onload="init()">
 
+<div class="date">
+    <h3>Sunday</h3>
+</div>
 
     <div class="content">
         <p><i>“What time are we leaving? ”</i> Alex asked.<br><br>
