--- a/Working Code/With Slider/html/96.html
+++ b/Working Code/With Slider/html/96.html
@@ -11,7 +11,9 @@
 </head>
 
 <body onload="init()">
-
+    <div class="date">
+        <h3>Tuesday</h3>
+    </div>
 
     <div class="content">
         <p> 
