working on angermeter

--- a/Working Code/With Slider/html/3.1.html
+++ b/Working Code/With Slider/html/3.1.html
@@ -17,7 +17,8 @@
 
         <h2 id="question">
             The device in the middle is only used in certain scenarios. <br>
-            To use it the top part must be pressed into the base. You might want to be standing up when using it and don't be afraid of using your bodyweight for interacting with it.<br>
+            To use it the top part must be pressed into the base. You might want to be standing up when using it and
+            don't be afraid of using your bodyweight for interacting with it.<br>
             Try it to see what happens.
         </h2>
     </div>
@@ -32,14 +33,17 @@
             <div id="myBar" class="w3-green" style="height:24px;width:0;background-color:rgb(255, 0, 0)"></div>
         </div>
         <br>
+        <div class="slidecontainer">
+            <input type="range" min="1" max="100" value="0" class="slider" id="myRange">
+        </div>
     </div>
     <h2>press continue when you are ready</h2>
 
 
-    <button hidden  id="saveBtn" class="saveBtn" onclick="inDataStore()">Save</button>
-    
+    <button hidden id="saveBtn" class="saveBtn" onclick="inDataStore()">Save</button>
 
-    <p  id="result"></p>
+
+    <p id="result"></p>
 
     <br>
     <br>
