--- a/Working Code/With Slider/html/16.html
+++ b/Working Code/With Slider/html/16.html
@@ -27,14 +27,16 @@
     </div>
 
     <div class="choices">
-        <button id="myBtn1" class="myBtn1" type="input" onclick=inDataStore()>confirm</button><br><br>
-        <button id="myBtn2" class="myBtn2" type="input" onclick=changePage("17.html")>continue</button><br><br>
+        <button id="myBtn1" class="myBtn1" type="input" onclick=changePage("17.html")>continue</button><br><br>
     </div>
 
     <div class="w3-container">
 
         <div class="w3-light-grey">
-            <div id="myBar" class="w3-green" style="height:24px;width:0;background-color:rgb(255, 0, 0)"></div>
+            <div id="myBar" class="w3-green"></div>
+            <div class="slidecontainer">
+                <input type="range" min="1" max="100" value="0" class="slider" id="myRange">
+            </div>
             <div>
                 <p id="anger1" class="anger1">Not angry at all</p>
                 <p id="anger2" class="anger2">Provoked</p>
@@ -45,13 +47,21 @@
         </div>
         <br>
     </div>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
 
 
-    <button hidden  id="saveBtn" class="saveBtn" onclick="inDataStore()">Save</button>
+    <button  id="saveBtn" class="saveBtn" onclick="saveValue()">Save</button>
 
 
 
-    <p hidden id="result"></p>
+    <p  id="result"></p>
 
     <br>
     <br>
