--- a/Working Code/With Slider/html/7.html
+++ b/Working Code/With Slider/html/7.html
@@ -12,10 +12,6 @@
 
 <body onload="init()">
 
-<div class="date">
-    <h3>Sunday</h3>
-</div>
-
     <div class="content">
         <p><i>“What time are we leaving? ”</i> Alex asked.<br><br>
 
@@ -31,8 +27,8 @@
     </div>
 
     <div class="choices">
-        <button id="myBtn1" class="myBtn1" type="input" onclick=changePage("8.html")>yes</button><br><br>
-        <button id="myBtn2" class="myBtn2" type="input" onclick=changePage("9.html")>no, let's not</button><br><br>
+        <button id="myBtn1" class="myBtn1" type="input" onclick=changePage("8.html")>YES</button><br><br>
+        <button id="myBtn2" class="myBtn2" type="input" onclick=changePage("9.html")>NO, LET'S NOT</button><br><br>
     </div>
 
     <script type="text/javascript" src="../js/script.js"></script>
