--- a/Working Code/With Slider/html/8.html
+++ b/Working Code/With Slider/html/8.html
@@ -12,8 +12,6 @@
 
 <body onload="init()">
 
-    <div class="date">
-
     <div class="content">
         <p>
             <i>“Come on, we have to go now otherwise we will be late!”</i>, Sophie shouted. <br><br>
@@ -31,8 +29,8 @@
     </div>
 
     <div class="choices">
-        <button id="myBtn1" class="myBtn1" type="input" onclick=changePage("10.html")>yes</button><br><br>
-        <button id="myBtn2" class="myBtn2" type="input" onclick=changePage("10.html")>no, let's not</button><br><br>
+        <button id="myBtn1" class="myBtn1" type="input" onclick=changePage("10.html")>YES</button><br><br>
+        <button id="myBtn2" class="myBtn2" type="input" onclick=changePage("10.html")>NO, LET'S NO</button><br><br>
     </div>
 
     <script type="text/javascript" src="../js/script.js"></script>
