--- a/Working Code/With Slider/html/9.html
+++ b/Working Code/With Slider/html/9.html
@@ -12,9 +12,6 @@
 
 <body onload="init()">
 
-    <div class="date">
-
-
     <div class="content">
         <p>
             <i>“Come on, we have to go now otherwise we will be late!”</i>, Sophie shouted <br><br>
@@ -31,7 +28,7 @@
     </div>
 
     <div class="choices">
-        <button id="myBtn1" class="myBtn1" type="input" onclick=changePage("10.html")>continue</button><br><br>
+        <button id="myBtn1" class="myBtn1" type="input" onclick=changePage("10.html")>CONTINUE</button><br><br>
     </div>
 
     <script type="text/javascript" src="../js/script.js"></script>
