--- a/Working Code/With Slider/html/1.html
+++ b/Working Code/With Slider/html/1.html
@@ -25,7 +25,7 @@
     </div>
 
     <div class="choices">
-        <button id="myBtn1" class="myBtn1" type="input" onclick=changePage("2.html")>continue</button><br><br>
+        <button id="myBtn1" class="myBtn1" type="input" onclick=changePage("2.html")>CONTINUE</button><br><br>
     </div>
 
 
