--- a/Working Code/With Slider/html/3.1.html
+++ b/Working Code/With Slider/html/3.1.html
@@ -35,7 +35,7 @@
     </div>
 
     <div class="choices">
-        <button id="myBtn1" class="myBtn1" type="input" onclick=changePage("3.html")>continue</button><br><br>
+        <button id="myBtn1" class="myBtn1" type="input" onclick=changePage("3.html")>CONTINUE</button><br><br>
     </div>
 
     <div class="w3-container">
