--- a/Working Code/With Slider/html/3.html
+++ b/Working Code/With Slider/html/3.html
@@ -31,7 +31,7 @@
     </div>
 
     <div class="choices">
-        <button id="myBtn1" class="myBtn1" type="input" onclick=changePage("4.html")>continue</button><br><br>
+        <button id="myBtn1" class="myBtn1" type="input" onclick=changePage("4.html")>CONTINUE</button><br><br>
     </div>
 
     <script type="text/javascript" src="../js/script.js"></script>
