--- a/Working Code/With Slider/html/5.html
+++ b/Working Code/With Slider/html/5.html
@@ -22,7 +22,7 @@
     </div>
 
     <div class="choices">
-        <button id="myBtn1" class="myBtn1" type="input" onclick=changePage("6.html")>continue</button><br><br>
+        <button id="myBtn1" class="myBtn1" type="input" onclick=changePage("6.html")>CONTINUE</button><br><br>
     </div>
 
     <script type="text/javascript" src="../js/script.js"></script>
