--- a/Working Code/With Slider/html/6.html
+++ b/Working Code/With Slider/html/6.html
@@ -33,7 +33,7 @@
     </div>
 
     <div class="choices">
-        <button id="myBtn1" class="myBtn1" type="input" onclick=changePage("7.html")>continue</button><br><br>
+        <button id="myBtn1" class="myBtn1" type="input" onclick=changePage("7.html")>CONTINUE</button><br><br>
     </div>
 
     <script type="text/javascript" src="../js/script.js"></script>
