--- a/Working Code/With Slider/html/16.html
+++ b/Working Code/With Slider/html/16.html
@@ -23,7 +23,7 @@ id="Soul">
             Anger <br><br>
 
 
-            (Indicate for 3 seconds to stabilise the value.)
+            Press save to report.
         </h2>
     </div>
 
