fixed transition from 25 to 26, added temp description for the nonworking angermeter

--- a/Working Code/With Slider/html/41.html
+++ b/Working Code/With Slider/html/41.html
@@ -15,9 +15,9 @@ id="Sophie">
 
 
     <div class="content">
-        <p><i>“yes, totally. I’m just going to tell Alex” </i><br><br>
+        <p><i>“Yes, totally. I’m just going to tell Alex” </i><br><br>
 
-        <i>“okay, we are leaving in 5”</i><br><br><br>
+        <i>“Okay, we are leaving in 5”</i><br><br><br>
             
             
             Sophie puts the phone against her ear again.<br><br>
