--- a/Working Code/With Slider/html/7.html
+++ b/Working Code/With Slider/html/7.html
@@ -28,8 +28,8 @@ id="Sophie">
     </div>
 
     <div class="choices">
-        <button id="myBtn1" class="myBtn1" type="input" onclick=changePage("8.html")>YES</button><br><br>
-        <button id="myBtn2" class="myBtn2" type="input" onclick=changePage("9.html")>NO, LET'S NOT</button><br><br>
+        <button id="myBtn1" class="myBtn1" type="input" onclick=changePage("8.html")>"YES"</button><br><br>
+        <button id="myBtn2" class="myBtn2" type="input" onclick=changePage("9.html")>"NO, LET'S NOT"</button><br><br>
     </div>
 
     <script type="text/javascript" src="../js/script.js"></script>
