added the temporary angermeter text mostly and just small wording changes

--- a/Working Code/With Slider/html/48.html
+++ b/Working Code/With Slider/html/48.html
@@ -22,7 +22,11 @@ id="Soul">
              Anger<br><br><br>
 
 
-            Indicate for 3 seconds to stabilise the value.
+             The technical issue has not been fixed yet. 
+             Please choose which of the following words describe your emotion the best at the moment, 
+             and write it on a piece of paper or in some text editor. <br>
+             You can even write down other emotions, that you are feeling at the moment. 
+             Press continue after having written down your report. 
         </h2>
     </div>
 
