--- a/Working Code/With Slider/html/55.html
+++ b/Working Code/With Slider/html/55.html
@@ -16,7 +16,7 @@ id="Sophie">
 
     <div class="content">
         <p>
-            So now even the presentation that Sophie prepared is useless.<br><br>
+            So now even the presentation that Sophie prepared was just wasted time.<br><br>
 
             She came early today. There are still 15 minutes left before her work starts officially.
             <p hidden id="anger">Anger</p>
