--- a/Working Code/With Slider/html/78.html
+++ b/Working Code/With Slider/html/78.html
@@ -16,7 +16,7 @@ id="Sophie">
 
     <div class="content">
         <p>
-            The call calmed Sophie down a bit, but she still doesn't have any peace of mind. <br><br><br>
+            The call calmed Sophie down a bit, but not sufficiently. She just needed to bring it up with Alex. <br><br><br>
 
 
             Alex came home soon after her.<br><br>
