--- a/Working Code/With Slider/html/79.html
+++ b/Working Code/With Slider/html/79.html
@@ -15,7 +15,7 @@ id="Sophie">
 
 
     <div class="content">
-        The bath was nice but Sophie couldn't enjoy it as her heart was still pounding. <br><br><br>
+        <p>The bath was nice but Sophie couldn't enjoy it as her heart was still pounding. <br><br><br>
 
 
 
