--- a/Working Code/With Slider/html/70.html
+++ b/Working Code/With Slider/html/70.html
@@ -16,7 +16,7 @@ id="Soul">
 
     <div class="content">
         <h2>
-            Thank you for your answer!
+            Thank you for your answer!<br>
 
             It is highly appreciated.
             
