fixed anger meter

--- a/Working Code/With Slider/html/34.html
+++ b/Working Code/With Slider/html/34.html
@@ -22,19 +22,21 @@ id="Soul">
             Anger<br><br>
 
 
-            Indicate for 3 seconds to stabilise the value.
+            Press save to report.
         </h2>
     </div>
 
     <div class="choices">
-        <button id="myBtn1" class="myBtn1" type="input" onclick=startAnger()>start</button><br><br>
-        <button id="myBtn2" class="myBtn2" type="input" onclick=changePage("35.html")>continue</button><br><br>
+        <button id="myBtn1" class="myBtn1" type="input" onclick=changePage("35.html")>continue</button><br><br>
     </div>
 
     <div class="w3-container">
 
         <div class="w3-light-grey">
-            <div id="myBar" class="w3-green" style="height:24px;width:0;background-color:rgb(255, 0, 0)"></div>
+            <div id="myBar" class="w3-green"></div>
+            <div class="slidecontainer">
+                <input type="range" min="1" max="100" value="0" class="slider" id="myRange">
+            </div>
             <div>
                 <p id="anger1" class="anger1">Not angry at all</p>
                 <p id="anger2" class="anger2">Provoked</p>
@@ -45,12 +47,22 @@ id="Soul">
         </div>
         <br>
     </div>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br><br><br><br><br><br><br>
 
 
-    <button hidden  id="saveBtn" class="saveBtn" onclick="inDataStore()">Save</button>
-    
+    <button  id="saveBtn" class="saveBtn" onclick="saveValue()">Save</button>
 
-    <p hidden id="result"></p>
+
+
+    <p  id="result"></p>
 
     <br>
     <br>
@@ -59,18 +71,6 @@ id="Soul">
 
     <p id="emotion"></p>
 
-    <script>
-        startAnger = function () {
-        setTimeout(function () {
-            autoclick();
-        }, 1000);
-    }
-
-        autoclick = function () {
-            document.getElementById("saveBtn").click();
-        }
-
-    </script>
 
     <script src="..\js\angermeter.js"></script>
 
