--- a/Working Code/With Slider/html/48.html
+++ b/Working Code/With Slider/html/48.html
@@ -14,63 +14,64 @@
 id="Soul">
 
 
-    <div class="content">
+<div class="content">
 
-        <h2 id="question">
-            Hi there Soul 647, to keep track of your emotional state, please report how you feel regarding the following
-            emotion:<br><br>
-             Anger<br><br><br>
+    <h2 id="question">
+        Hi there Soul 647, to keep track of your emotional state, please report how you feel regarding the following
+        emotion:<br><br>
+        
+        Anger <br><br>
 
 
-            Indicate for 3 seconds to stabilise the value.
-        </h2>
-    </div>
+        Press save to report.
+    </h2>
+</div>
 
-    <div class="choices">
-        <button id="myBtn1" class="myBtn1" type="input" onclick=startAnger()>start</button><br><br>
-        <button id="myBtn2" class="myBtn2" type="input" onclick=changePage("49.html")>continue</button><br><br>
-    </div>
+<div class="choices">
+    <button id="myBtn1" class="myBtn1" type="input" onclick=changePage("49.html")>continue</button><br><br>
+</div>
 
-    <div class="w3-container">
+<div class="w3-container">
 
-        <div class="w3-light-grey">
-            <div id="myBar" class="w3-green" style="height:24px;width:0;background-color:rgb(255, 0, 0)"></div>
-            <div>
-                <p id="anger1" class="anger1">Not angry at all</p>
-                <p id="anger2" class="anger2">Provoked</p>
-                <p id="anger3" class="anger3">Angry</p>
-                <p id="anger4" class="anger4">Very angry</p>
-                <p id="anger5" class="anger5">Furious</p>
-            </div>
+    <div class="w3-light-grey">
+        <div id="myBar" class="w3-green"></div>
+        <div class="slidecontainer">
+            <input type="range" min="1" max="100" value="0" class="slider" id="myRange">
         </div>
-        <br>
+        <div>
+            <p id="anger1" class="anger1">Not angry at all</p>
+            <p id="anger2" class="anger2">Provoked</p>
+            <p id="anger3" class="anger3">Angry</p>
+            <p id="anger4" class="anger4">Very angry</p>
+            <p id="anger5" class="anger5">Furious</p>
+        </div>
     </div>
-
-
-    <button hidden  id="saveBtn" class="saveBtn" onclick="inDataStore()">Save</button>
-    
-
-    <p hidden id="result"></p>
-
     <br>
-    <br>
-    <br>
-    <br>
+</div>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br><br><br><br><br><br><br>
 
-    <p id="emotion"></p>
 
-    <script>
-        startAnger = function () {
-        setTimeout(function () {
-            autoclick();
-        }, 1000);
-    }
+<button  id="saveBtn" class="saveBtn" onclick="saveValue()">Save</button>
 
-        autoclick = function () {
-            document.getElementById("saveBtn").click();
-        }
 
-    </script>
+
+<p  id="result"></p>
+
+<br>
+<br>
+<br>
+<br>
+
+<p id="emotion"></p>
+
 
     <script src="..\js\angermeter.js"></script>
 
