--- a/Working Code/With Slider/html/26.html
+++ b/Working Code/With Slider/html/26.html
@@ -29,9 +29,9 @@
 
     <script>
         document.body.style.backgroundColor = localStorage.getItem("color");
-        document.getElementById("text").style.color = "black";
-        document.getElementById("myBtn1").style.color = "black";
-        document.getElementById("myBtn2").style.color = "black";
+        document.getElementById("text").style.color = "white";
+        document.getElementById("myBtn1").style.color = "white";
+        document.getElementById("myBtn2").style.color = "white";
     </script>
 
     <script type="text/javascript" src="../js/script.js"></script>
