--- a/Working Code/With Slider/html/24.html
+++ b/Working Code/With Slider/html/24.html
@@ -36,8 +36,8 @@
 
     <script>
         document.body.style.backgroundColor = localStorage.getItem("color");
-        document.getElementById("text").style.color = "black";
-        document.getElementById("myBtn1").style.color = "black";
+        document.getElementById("text").style.color = "white";
+        document.getElementById("myBtn1").style.color = "white";
     </script>
 
     <script type="text/javascript" src="../js/script.js"></script>
