use mouse to select presentation things

--- a/Working Code/With Slider/html/23.html
+++ b/Working Code/With Slider/html/23.html
@@ -19,7 +19,8 @@ id="Sophie">
             gets asked to present her suggestions for business strategies.
 
 
-            She still needs to edit a few things. What should the background colour of the presentation be?</h2>
+            She still needs to edit a few things. What should the background colour of the presentation be?<br><br>
+            (Please use your mouse to select.)</h2>
 
 
     </div>
