--- a/Working Code/With Slider/html/54.html
+++ b/Working Code/With Slider/html/54.html
@@ -24,7 +24,7 @@ id="Soul">
             
             Soultopilot has begun a recalibration.
         </h2>
-            <p id="anger">Anger</p>
+            <p hidden id="anger">Anger</p>
     </div>
     
 
