--- a/Working Code/With Slider/html/48.html
+++ b/Working Code/With Slider/html/48.html
@@ -17,7 +17,8 @@ id="Soul">
 <div class="content">
 
     <h2 id="question">
-        Hi there Soul 647, to keep track of your emotional state, please report how you feel regarding the following
+        Hi there Soul 647,<br>
+         to keep track of your emotional state, please report how you feel regarding the following
         emotion:<br><br>
         
         Anger <br><br>
