--- a/Working Code/With Slider/html/7.html
+++ b/Working Code/With Slider/html/7.html
@@ -9,9 +9,15 @@
     <script src="../js/p5.serialport.js"></script>
     <link rel="stylesheet" type="text/css" href="../css/styles.css">
 </head>
+    
 
 <body onload="init()"
 id="Sophie">
+
+
+<div class="day">
+    <h4><i>Sunday</i></h4>    
+    </div>
 
     <div class="content">
         <p><i>“What time are we leaving? ”</i> Alex asked.<br><br>
