--- a/Working Code/With Slider/html/16.html
+++ b/Working Code/With Slider/html/16.html
@@ -59,7 +59,7 @@ id="Soul">
     <br>
     <br><br><br><br><br><br><br>
 
-    <p  id="result"></p>
+    <p class="result"  id="result"></p>
 
     <br>
     <br>
