--- a/Working Code/With Slider/html/101.html
+++ b/Working Code/With Slider/html/101.html
@@ -49,7 +49,7 @@ id="Sophie">
 
     <div class="choices">
         <button id="myBtn1" class="myBtn1" type="input" onclick=changePage("102.html")>Wave at him</button><br><br>     
-        <button id="myBtn2" class="myBtn2" type="input" onclick=changePage("102.html")>Pretend to not see him</button><br><br>     
+        <button id="myBtn2" class="myBtn2" type="input" onclick=changePage("102.html")>Pretend not to see him</button><br><br>     
     </div>
 
 
