--- a/Working Code/With Slider/html/7.html
+++ b/Working Code/With Slider/html/7.html
@@ -16,9 +16,10 @@ id="Sophie">
 
 
 <div class="day">
-    <h4><i>Sunday</i></h4>    
+    <h4><i>Sunday, morning</i></h4>    
     </div>
-
+<br>
+<br>
     <div class="content">
         <p><i>“What time are we leaving? ”</i> Alex asked.<br><br>
 
