--- a/Working Code/With Slider/html/96.html
+++ b/Working Code/With Slider/html/96.html
@@ -13,6 +13,10 @@
 <body onload="init()"
 id="Sophie">
 
+<div class="day">
+    <h4><i>Tuesday evening</i></h4>    
+    </div>
+
     <div class="content">
         <p> 
             <i>“Sophie, are you done soon? We need to leave!” <br><br>
