--- a/Working Code/With Slider/html/23.html
+++ b/Working Code/With Slider/html/23.html
@@ -12,9 +12,12 @@
 
 <body onload="init()"
 id="Sophie">
+<div class="day">
+    <h4><i>Tuesday, morning</i></h4>    
+    </div>
 
     <div class="content">
-        <h2 id ="text">Tuesday morning Sophie woke up in an extra great mood. She felt very motivated and excited to start working.
+        <h2 id ="text">Sophie woke up in an extra great mood. She felt very motivated and excited to start working.
             Today she has to prepare a presentation for next week and wanted to make it look extra nice, in case she
             gets asked to present her suggestions for business strategies.
 
