--- a/Working Code/With Slider/html/27.html
+++ b/Working Code/With Slider/html/27.html
@@ -13,6 +13,9 @@
 <body onload="init()"
 id="Sophie">
 
+<div class="day">
+    <h4><i>Tuesday, noon</i></h4>    
+    </div>
 
     <div class="content">
         <p>
