--- a/Working Code/With Slider/html/28.html
+++ b/Working Code/With Slider/html/28.html
@@ -12,7 +12,9 @@
 
 <body onload="init()"
 id="Sophie">
-
+<div class="day">
+    <h4><i>Tuesday, noon</i></h4>    
+    </div>
 
     <div class="content">
         <p>
