--- a/Working Code/With Slider/html/36.html
+++ b/Working Code/With Slider/html/36.html
@@ -12,6 +12,9 @@
 
 <body onload="init()"
 id="Sophie">
+<div class="day">
+    <h4><i>Saturday, evening</i></h4>    
+    </div>
 
     <div class="content">
         <p>Sophie has a yearly buffé with her friends which falls on this Saturday. <br><br>
