--- a/Working Code/With Slider/html/50.html
+++ b/Working Code/With Slider/html/50.html
@@ -12,6 +12,9 @@
 
 <body onload="init()"
 id="Sophie">
+<div class="day">
+    <h4><i>Monday, morning</i></h4>    
+    </div>
 
     <div class="content">
         <p>Sophie walked into the room to see everyone celebrating around Daniel. She wondered what it was about and was starting to 
