--- a/Working Code/With Slider/html/8.html
+++ b/Working Code/With Slider/html/8.html
@@ -12,6 +12,9 @@
 
 <body onload="init()"
 id="Sophie">
+<div class="day">
+    <h4><i>Sunday, afternoon</i></h4>    
+    </div>
 
     <div class="content">
         <p>
