--- a/Working Code/With Slider/html/9.html
+++ b/Working Code/With Slider/html/9.html
@@ -13,6 +13,10 @@
 <body onload="init()"
 id="Sophie">
 
+<div class="day">
+    <h4><i>Sunday, afternoon</i></h4>    
+    </div>
+
     <div class="content">
         <p>
             <i>“Come on, we have to go now otherwise we will be late!”</i>, Sophie shouted <br><br>
