fixed connections and such

--- a/Working Code/With Slider/html/105.html
+++ b/Working Code/With Slider/html/105.html
@@ -12,7 +12,11 @@
 
 <body onload="init()"
 id="Sophie">
-
+<div class="day">
+    <h4><i>Thursday evening</i></h4>    
+    </div>
+    <br>
+    <br>
 
 
     <div class="content">
